--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,12 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: "golang:1.11-alpine"
+      - image: "circleci/golang:1.11"
     parallelism: 3
+    working_directory: "/go/src/github.com/rocklviv/isearch"
     steps:
-      - make lint
-      - make test
-      - make build-multiarch
+      - checkout
+      - run: |
+          make test
+      - run: |
+          make build-multiarch
