Added deployment of artifacts into circle ci configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,10 @@ jobs:
           make test
       - run: |
           make build-multiarch
+      - deploy_artifact:
+        requires:
+          - build
+        filters:
+          tags:
+            only:
+              - /^v.*/
